--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".sample.PostActivity">
+    tools:context=".sample.ui.PostActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
